test/pass/api/hash/hash_clear.lly
var h = [1 => 1, 2 => 2, 3 => 3]

h.clear()

if h != []:
    stderr.print("Failed.")

h.clear()
